#pragma once

class LevelManager {
private:

public:
    // construtora e deestrutora
};